<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="server_roles">Server Roles</string>
    <string name="add">add</string>
    <string name="open_secrete_book">Open Secret Book</string>
    <string name="app_name">Server Manager</string>
    <string name="action_settings">Settings</string>
    <string name="encryption_key">Encryption Key</string>
    <string name="iv_key">IV Key</string>
    <string name="text_prompt">Text prompt</string>
    <string name="plainText_here">Plain text here</string>
    <string name="encryption_init">Start Encryption</string>
    <string name="title_activity_encryption_display">EncryptionDisplay</string>
    <string name="server_name">Server name</string>
    <string name="placeholder">XXX.XXX.XXX.XXX</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="host_name">Host name</string>
    <string name="os_list">Installed OS(es)</string>
    <string name="roles_list">Roles</string>
    <string name="password">Password</string>
    <string name="change_maker">Changed by</string>
    <string name="date_of_password_change">Date of password change</string>
    <string name="server_location">Server Location</string>
    <string name="draw_table">Draw Table</string>
    <string name="user_name">UserName</string>
    <string name="user_name_here">UserName here</string>
    <string name="user_password">User Password</string>
    <string name="password_here">Password here</string>
    <string name="user_role">User Role</string>
    <string name="emptyString">emptyString</string>
    <string name="title_activity_user_display">UserDisplayActivity</string>
    <string name="search_text">Search</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="exitApp">Exit</string>
    <string name="title_activity_server_display">ServerDisplayActivity</string>
    <string name="ua_logo_description">UofA logo</string>
    <string name="exit_activity_string">Close</string>
    <string name="title_activity_upload">UploadActivity</string>
    <string name="title_activity_create_server">CreateServerActivity</string>
    <string name="title_activity_create_user">CreateUserActivity</string>
    <string name="hostname">Hostname</string>
    <string name="hostname_here">Hostname Here</string>
    <string name="save">Save</string>
    <string name="change_maker_name">Changed By</string>
    <string name="change_maker_name_here">Changer name here</string>
    <string name="change_date">Change Date</string>
    <string name="change_date_here">YYYY/MM/DD</string>
    <string name="hello_world">Hello world!</string>
    <string name="role">Role</string>
    <string name="search_results_here">Search results here!</string>
    <string name="location">Location</string>
    <string name="location_here">Location Here</string>
    <string name="aliases">Aliases</string>
    <string name="aliases_here">Aliases here</string>
    <string name="newUser">New User</string>
    <string name="blankString"></string>
    <string name="view_servers">View servers</string>
    <string name="create_new_server">Create new server</string>
    <string name="ips">IPS</string>
    <string name="search_here">Search servers</string>
    <string name="ips_here">IPS here</string>
    <string name="user_role_here">User role here</string>
    <string name="title_activity_enter_list_items">EnterListItems</string>
    <string name="enter_item_here">Enter item here</string>
    <string name="add_to_list">Add to List</string>
    <string name="add_aliases">Add aliases</string>
    <string name="add_oses">Add OS-es</string>
    <string name="add_roles">Add roles</string>
    <string name="add_ips">Add IPs</string>
    <string name="encrypt_trigger_text">Encrypt and upload now</string>
    <string name="pullData">Retrieve file from Google Drive</string>
    <string name="title_activity_pull_data_from_drive">PullDataFromDrive</string>
    <string name="title_activity_push_data_to_drive">PushDataToDrive</string>
    <string name="pushData">Upload file to Google Drive</string>
    <string name="upload_info">Enter your 16-bit encryption key,\n
	    plus IV and click the Upload button, to upload\nyour encrypted file to the Google drive</string>
    <string name="download_info">Enter your 16-bit encryption key,\n
	    plus IV and click the Download button, to decrypt your file from the Google drive</string>
    <string name="title_activity_shut_down">ShutDownActivity</string>
    <string name="title_activity_select_cloud_account">SelectCloudAccountActivity</string>
    <string name="custom_title_msg">ECE APP activity</string>
    <string name="no_server_data_warning">No server data is available for upload</string>
    <string name="no_validating_regex_li">I need to have a regex for validating each item added to the table</string>
    <string name="unknown_list_name">I have to know which list item I am creating</string>
    <string name="invalid">Invalid</string>
    <string name="iv_encryption_key_description">Enter 16-character long IV and Encryption key</string>
    <string name="null_drive_warning">No drive service found</string>
    <string name="null_credential_warning">Null credentials passed in</string>
    <string name="credential_success">Credential successfully received</string>
    <string name="select_account">Select account</string>
    <string name="set_iv_encryption_key">Set IV &amp; Encryption key</string>
    <string name="title_activity_iv_encryption_key_select">IvEncryptionKeySelectActivity</string>
    <string name="iv_encryption_key_img_description">IV_KEY_ENCRYPTION_KEY_IMAGE downloaded from a Google search</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="title_activity_preparation">Preparation</string>
    <string name="app_welcome">Welcome to Server Manager</string>
    <string name="preparation_welcome">Select a Google account, and enter your Encryption keys down below.</string>
    <string name="title_activity_single_server_page">SingleServerPage</string>
    <string name="select_new_account">Select other account</string>
    <string name="invalid_encryption_credentials">Invalid encryption and IV keys</string>
    <string name="google_account">Click to select a Google account</string>
    <string name="title_activity_setencryptioncredentials">Setencryptioncredentials</string>
    <string name="exit">Exit</string>
    <plurals name="character">
        <item quantity="zero">no characters</item>
    	<item quantity="one">character</item>
    	<item quantity="other">characters</item>
    </plurals>
</resources>