<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".IvEncryptionKeySelectActivity" >

	    <RelativeLayout
	        android:id="@+id/iv_encryption_relativeLayout"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	        
			<TextView 
			    android:id="@+id/iv_encryption_key_intent_description_tv"
			    android:layout_gravity="center"
			    android:layout_width="match_parent"
			    android:layout_height="match_parent" 
			    android:text="@string/iv_encryption_key_description" />
			
		    <Button
		        android:id="@+id/save_iv_encryption_key"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentBottom="true"
		        android:layout_alignRight="@+id/iv_et"
		        android:layout_below="@+id/encryption_key_et"
		        android:text="@string/save" />

		    <ImageView
		        android:id="@+id/iv_encryption_key_image"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/iv_encryption_key_intent_description_tv"
		        android:layout_centerHorizontal="true"
		        android:background="@drawable/keysilhouette"
		        android:contentDescription="@string/iv_encryption_key_img_description" />

		    <TextView
		        android:id="@+id/encrypt_key_tv"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignBottom="@+id/iv_et"
		        android:layout_alignParentLeft="true"
		        android:layout_alignTop="@+id/iv_et"
		        android:layout_toLeftOf="@+id/iv_et"
		        android:text="@string/encryption_key" />

		    <EditText
		        android:id="@+id/iv_et"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentRight="true"
		        android:layout_below="@+id/iv_encryption_key_image"
		        android:layout_marginTop="22dp"
		        android:ems="10"
		        android:inputType="text" >

		        <requestFocus />
		    </EditText>
		    
		    <EditText
		        android:id="@+id/encryption_key_et"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentRight="true"
		        android:layout_below="@+id/iv_et"
		        android:layout_marginTop="21dp"
		        android:ems="10"
		        android:inputType="text" />

		    <TextView
		        android:id="@+id/iv_tv"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignTop="@+id/encryption_key_et"
		        android:text="@string/iv_key" />

    </RelativeLayout>
</ScrollView>