<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <!-- Button
        android:id="@+id/exit_main_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exitApp" 
        android:onClick="exitMainMenu"/>
      -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/createNewServerButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="createNewServer"
            android:layout_weight="1"
            android:text="@string/create_new_server" />

        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="exitServer"
            android:layout_weight="1"
            android:text="@string/exit" />
    </LinearLayout>

    <EditText
        android:id="@+id/searchServersET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_text"
        android:ems="10" >
        <requestFocus />
    </EditText>

    <ListView
        android:id="@+id/mainServerList"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </ListView>

</LinearLayout>