<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/gld_32_80"
    tools:context=".EnterListItems" >
	<TableLayout
	    android:id="@+id/list_items_table"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" 
	    android:layout_below="@+id/add_to_list_et"/>

	<EditText
	    android:id="@+id/add_to_list_et"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBaseline="@+id/save_list_item_button"
	    android:layout_alignBottom="@+id/save_list_item_button"
	    android:layout_alignParentLeft="true"
	    android:ems="10"
	    android:hint="@string/enter_item_here" />

	<Button
	    android:id="@+id/save_list_item_button"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
	    android:layout_alignParentTop="true"
	    android:layout_marginTop="96dp"
	    android:text="@string/add_to_list" />

	<Button
	    android:id="@+id/save_list_items"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
	    android:layout_alignParentTop="true"
	    android:text="@string/save" />

</RelativeLayout>
