<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SingleServerPage"
    android:focusable="true" 
    android:focusableInTouchMode="true"
     >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/serverNameEditText"
            android:hint="@string/server_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" />

        <EditText
            android:id="@+id/serverLocationEditText"
             android:hint="@string/server_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" >
            <requestFocus />
        </EditText>

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@color/google_green" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/userNameEditText"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/user_name" />

        <EditText
            android:id="@+id/passWordEditText"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password" />

        <EditText
            android:id="@+id/userRoleEditText"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:ems="10"
            android:hint="@string/user_role" />

        <Button
            android:id="@+id/button1"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/google_green"
            android:text="@string/add"
            android:textColor="#ffffff"
            android:textStyle="bold" 
            android:onClick = "addUserHandler"/>
    </LinearLayout>

    <ListView
        android:id="@+id/userListView"
        android:layout_width="match_parent"
        android:layout_height="224dp" >
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="214dp"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="@color/google_red" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/addOsEditText"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:ems="10"
                    android:hint="@string/os_list" />

                <Button
                    android:id="@+id/addOsButton"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.60"
                    android:background="@color/google_red"
                    android:text="@string/add"
                    android:textColor="#ffffff"
                    android:textStyle="bold" 
                    android:onClick ='addOsHandler'/>
            </LinearLayout>

            <ListView
                android:id="@+id/osListView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
            </ListView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="@color/google_yellow" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/addIpEditText"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:ems="10"
                    android:hint="@string/ips" />

                <Button
                    android:id="@+id/addIpButton"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.60"
                    android:background="@color/google_yellow"
                    android:onClick="addIpHandler"
                    android:text="@string/add"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />
            </LinearLayout>

            <ListView
                android:id="@+id/ipListView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
            </ListView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="213dp"
        android:baselineAligned="false" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="@color/google_blue" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/addAliaseEditText"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:ems="10"
                    android:hint="@string/aliases" >
                </EditText>

                <Button
                    android:id="@+id/addAliaseButton"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.60"
                    android:background="@color/google_blue"
                    android:text="@string/add"
                    android:textColor="#ffffff"
                    android:textStyle="bold" 
                    android:onClick="addAliaseHandler"/>
            </LinearLayout>

            <ListView
                android:id="@+id/aliaseListView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
            </ListView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="@color/google_green" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/addServerRoleEditText"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:ems="10"
                    android:hint="@string/server_roles" />

                <Button
                    android:id="@+id/addServerRoleButton"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:background="@color/google_green"
                    android:text="@string/add"
                    android:textColor="#ffffff"
                    android:textStyle="bold" 
                    android:onClick="addServerRoleHandler"/>
            </LinearLayout>

            <ListView
                android:id="@+id/serverRoleListView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
            </ListView>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/saveServerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textStyle="bold"
        android:onClick="saveSingleServer"/>

</LinearLayout>